st 02 params update

--- a/params.yaml
+++ b/params.yaml
@@ -1,7 +1,8 @@
 AUGMENTATION: True
 IMAGE_SIZE: [224, 224, 3]
 BATCH_SIZE: 16
+INCLUDE_TOP: False
 EPOCHS: 1
 CLASSES: 2
-BASE_MODEL: VGG16
+WEIGHTS: imagenet
 LEARNING_RATE: 0.001
