st 02 | dvc YAML update

--- a/dvc.yaml
+++ b/dvc.yaml
@@ -9,3 +9,20 @@ stages:
       - configs/config.yaml
     outs:
       - artifacts/data_ingestion/data.zip
+
+  prepare_base_model:
+    cmd: python src/deepClassifier/pipeline/stage_02_prepare_base_model.py
+    deps: 
+      - src/deepClassifier/pipeline/stage_02_prepare_base_model.py
+      - src/deepClassifier/components/prepare_base_model.py
+      - src/deepClassifier/config/configuration.py
+      - src/deepClassifier/entity/config_entity.py
+      - configs/config.yaml
+    params:
+      - IMAGE_SIZE
+      - INCLUDE_TOP
+      - CLASSES
+      - WEIGHTS
+      - LEARNING_RATE
+    outs:
+      - artifacts/prepare_base_model
