--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -19,3 +19,7 @@ prepare_callbacks:
 training:
   root_dir: artifacts/training
   trained_model_path: artifacts/training/model.h5
+
+evaluate:
+ root_dir: artifacts/evaluate
+ 
